<resources>
    <string name="app_name">Dialog Box</string>
    <string name="color_penal">Color Penal</string>
    <string name="design_penal">Design Penal</string>
    <string name="font_penal">Font Penal</string>
    <string name="full_name">Full Name</string>
    <string name="designation">Designation</string>
    <string name="company">Company</string>
    <string name="about_me">About Me</string>
    <string name="contact_info">Contact Info</string>
    <string name="contact_no">Contact No</string>
    <string name="whatsapp_no">Whatsapp No</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="services_info">Services Info</string>
    <string name="services">Services</string>
    <string name="add_multiple">Add multiple services with, (Service1,Service2,...)</string>
    <string name="contact">Contact</string>
</resources>